# automation-framework

./: .env.example  .gitignore  ACTION_EXECUTION_FLOW.md  ADAPTIVE_CAPTCHA_SUMMARY.md  AI_DEPENDENCIES_INSTALLATION.md  AI_GENERATION_FIELD_NAME_FIX.md  AI_GENERATION_INTEGRATION_COMPLETE.md  AI_GENERATION_QUICK_START.md  AI_MODEL_CALL_CHECK.md  AI_MODEL_CONFIG_FIX.md  AI_MODEL_DIALOG_VISUAL_GUIDE.md  AI_MODEL_EDIT_DIALOG_COMPLETE.md  AI_MODEL_EXTEND_GUIDE.md  AI_MODEL_TEST_BUTTON_CHECK.md  AI_MODEL_TYPE_FIX.md  AI_MODEL_TYPE_USAGE.md  AI_MODEL_UNIFICATION_ANALYSIS.md  AI_MODEL_UNIFICATION_COMPLETE.md  AI_MODEL_UPDATE_FIX.md  AI_MODEL_UPDATE_FIX_V2.md  AI论文模块完整流程整理.md  ALL_IMPROVEMENTS_COMPLETE.md  API_BASE_URL_CHECK.md  BROWSER_AUTOMATION_SCENARIOS.md  CAPTCHA_ADAPTIVE_STRATEGY.md  CAPTCHA_ALGORITHM_IMPROVEMENTS.md  CAPTCHA_SUPPORT_SUMMARY.md  CAPTCHA_TYPES_SUPPORT.md  CAPTCHA_VISION_UNIFIED_PROCESSING.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_CAPTCHA_TYPES.md  CONNECTION_ERROR_RETRY_FIX.md  DEVELOPMENT_PLAN.md  DUPLICATE_TABLE_DEFINITION_FIX.md  FILE_UPLOAD_ISSUE_ANALYSIS.md  FINAL_IMPLEMENTATION_STATUS.md  FORMAT_CODE_REVIEW.md  FRAMEWORK_REVIEW.md  FRONTEND_CACHE_FIX.md  GLOBAL_AI_CONFIG_COMPLETE.md  (+52 more)
automation-framework/: .env.example  .gitignore  DEPENDENCIES.md  DEPENDENCIES_CHECK.md  Dockerfile  MIGRATION_TO_SQLALCHEMY.md  QUICK_START.md  QWEN_INTEGRATION.md  README.md  SDK_README.md  STARTUP_GUIDE.md  code_test_results.md  code_validation_summary.md  comprehensive_code_test.md  desktop_automation_final_report.md  desktop_automation_test.md  desktop_fixes_summary.md  desktop_task_analysis.md  docker-compose.yml  execution_flow_analysis.md  final_code_review.md  final_comprehensive_test.md  init_remote_db.py  pyproject.toml  requirements-minimal.txt  requirements.txt  windows_complete_features.md  windows_enhancement_final.md  windows_enhancements_summary.md  windows_features_complete.md  重要分析.MD
automation-framework/config/: qwen_config.example.json
automation-framework/database/: README.md  init_db.bat  init_db.sh  schema.sql  schema_minimal.sql
automation-framework/docs/: ADMIN_SETUP.md  AGENT_DEVELOPMENT_GUIDE.md  ANTHROPIC_SKILLS_INTEGRATION.md  API_REFERENCE.md  DOCX_SKILLS_CAPABILITIES.md  GITHUB_SKILLS_RECOMMENDATIONS.md  NATURAL_LANGUAGE_ARCHITECTURE.md  NATURAL_LANGUAGE_TASK_GUIDE.md  QUICKSTART.md  QUICK_START_SCENARIO.md  QWEN_SETUP.md  RATE_LIMIT_HANDLING.md  SCENARIO_BASED_AUTOMATION.md  SKILLS_INSTALLATION_GUIDE.md
automation-framework/examples/: adaptive_captcha_example.py  ai_agent_example.py  anthropic_skills_example.py  browser_example.py  comprehensive_captcha_test.py  improved_scenarios.py  local_ocr_example.py  (+3 more)
(+565 files in other folders)
